--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,13 @@ version: 2
 jobs:
   test:
     docker:
-      # specify the version you desire here
       - image: maven:3.5.3-jdk-8-alpine
-
     working_directory: ~/dokuti-build
-
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
-
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - dokuti-build-{{ checksum "pom.xml" }}
@@ -29,24 +23,18 @@ jobs:
       - run: mvn test
   sonarqube:
     docker:
-      # specify the version you desire here
       - image: maven:3.5.3-jdk-8-alpine
     working_directory: ~/dokuti-sonarqube
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - dokuti-sonarqube-{{ checksum "pom.xml" }}
-
       - run: mvn dependency:go-offline
-
       - save_cache:
           paths:
             - ~/.m2
           key: dokuti-sonarqube-{{ checksum "pom.xml" }}
-
       - run: |
          mvn clean
          mvn package \
@@ -67,7 +55,7 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
-      # build and push Docker image
+      # build and push Docker image to dockerhub.
       - run: |
           TAG=0.2.$CIRCLE_BUILD_NUM
           docker build -t grindrodbank/dokuti:$TAG .     
