--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,12 +61,26 @@ jobs:
           docker build -t grindrodbank/dokuti:$TAG .     
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker push grindrodbank/dokuti:$TAG
+  fossa-build:
+    docker:
+      - image: circleci/golang
+    steps:
+      - run: |
+          curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
+      - checkout
+      - run:
+        command: fossa init
+        working_directory: ~/dokuti-fossa-build
+      - run:
+        command: fossa --help
+        working_directory: ~/dokuti-fossa-build
 workflows:
   version: 2
   build-master:
     jobs:
       - test
       - sonarqube
+      - fossa-build
       - docker-build:
           requires:
             - test
