Injecting fossa API key as part of cli run analyze command.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
           command: fossa init
           working_directory: ~/dokuti-fossa-build
       - run:
-          command: fossa analyze
+          command: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
           working_directory: ~/dokuti-fossa-build
 workflows:
   version: 2
