--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,11 +63,13 @@ jobs:
           docker push grindrodbank/dokuti:$TAG
   fossa-scan:
     docker:
-      - image: circleci/golang:1.8
+      - image: maven:3.5.3-jdk-8-alpine
     steps:
       - run: |
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
       - checkout
+      - run:
+        command: mvn compile
       - run:
           command: fossa init
       - run:
