--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,13 +67,11 @@ jobs:
     steps:
       - run: |
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
+      - run: apt-get install maven
       - checkout
-      - run:
-          command: mvn compile
-      - run:
-          command: fossa init
-      - run:
-          command: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
+      - run: mvn compile
+      - run: fossa init
+      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
 workflows:
   version: 2
   build-master:
