--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,8 @@ jobs:
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
       - attach_workspace:
           # Must be absolute path or relative path from working_directory
-          at: .
+          at: ~/dokuti-build
+      - run: cd ~/dokuti-build
       - run: fossa init
       - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
   compile:
@@ -94,7 +95,9 @@ jobs:
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
-          root: .
+          root: ~
+          paths: 
+            - dokuti-build
 workflows:
   version: 2
   build-master:
