Updated fossa scan with debug commands.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,8 @@ jobs:
           at: ~/dokuti-build
       - run: pwd
       - run: ls -lah
+      - run: cd dokuti-build
+      - run: ls -lah
       - run: fossa init
       - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
   compile:
