Testing fossa scan.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,8 @@ jobs:
       - run: ls -lah
       - run: cd dokuti-build && ls -lah
       - run: ls -lah
-      - run: fossa init
-      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
+      - run: cd dokuti-build && fossa init
+      - run: cd dokuti-build && FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
   compile:
     docker:
       - image: maven:3.5.3-jdk-8-alpine
