--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ workflows:
     jobs:
       - test
       - sonarqube
-      - fossa-scan:
+      - fossa-scan
       - docker-build:
           requires:
             - test
