--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,8 @@ jobs:
       - run: apt-get -y install maven
       - checkout
       - run: fossa init
-      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze -o
+      - run: cat .fossa.yml
+      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa test --debug
 workflows:
   version: 2
   build-commit:
