--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,8 +74,7 @@ jobs:
       - run: apt-get -y install maven
       - checkout
       - run: fossa init
-      - run: cat .fossa.yml
-      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa test --debug
+      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
 workflows:
   version: 2
   build-commit:
