--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,7 @@ jobs:
       - run: apt-get update
       - run: apt-get -y install maven
       - checkout
-      - run: fossa init
-      - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
+      - run: fossa test
 workflows:
   version: 2
   build-commit:
