--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,7 @@ jobs:
       - run: apt-get -y install maven
       - checkout
       - run: fossa init
+      - run: cat .fossa.yml
       # Note: The -o flag does not publish the results to Fossa App, just prints them out to the console.
       # Note: The 'fossa test' command is more appropriate to be used here, but it is not functioninig (has a bug) at the time of writing this code.
       - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze -o
