Updated the project name in the manual fossa config to match the web name.

--- a/.fossa.yml
+++ b/.fossa.yml
@@ -2,7 +2,7 @@ version: 2
 cli:
   server: https://app.fossa.com
   fetcher: custom
-  project: github.com/GrindrodBank/dokuti
+  project: dokuti
 analyze:
   modules:
   - name: za.co.grindrodbank:dokuti
