Updated the commenting in the circle CI configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,9 +74,8 @@ jobs:
       - run: apt-get -y install maven
       - checkout
       - run: fossa init
-      # Note: The -o flag does not publish the results to Fossa App, just prints them out to the console.
-      # Note: The 'fossa test' command is more appropriate to be used here, but it is not functioninig (has a bug) at the time of writing this code.
       - run: FOSSA_API_KEY=$FOSSA_API_KEY fossa analyze
+      # Note: The 'fossa test' command must be run after the analyze command has been run, as it is dependent on the previous scan.
       - run: fossa test
 workflows:
   version: 2
