--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,9 @@ jobs:
           docker build -t grindrodbank/dokuti:$TAG .     
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker push grindrodbank/dokuti:$TAG
+          # Tag and push latest
+          docker tag grindrodbank/dokuti:$TAG grindrodbank/dokuti:latest
+          docker push grindrodbank/dokuti:latest
   fossa-scan:
     docker:
       - image: golang:1.10.0-stretch
