--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-  			<groupId>org.springframework.security.oauth.boot</groupId>
-  			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-  			<version>2.1.3.RELEASE</version>
+			<groupId>org.springframework.security.oauth.boot</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>2.1.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -84,16 +84,17 @@
 			<artifactId>assertj-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- dependencies are needed for the server api being generated from swagger spec -->
+		<!-- dependencies are needed for the server api being generated from swagger 
+			spec -->
 		<dependency>
-		  <groupId>io.swagger</groupId>
-		  <artifactId>swagger-annotations</artifactId>
-		  <version>${swagger-annotations-version}</version>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swagger-annotations-version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger2</artifactId>
-		    <version>${springfox-version}</version>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox-version}</version>
 		</dependency>
 	</dependencies>
 
@@ -105,55 +106,52 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<!-- SWAGGER CODE GEN -->
-		    <!-- activate the plugin -->
-		    <plugin>
-			    <groupId>org.openapitools</groupId>
-			    <artifactId>openapi-generator-maven-plugin</artifactId>
-			    <version>3.3.4</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>generate</goal>
-			            </goals>
-			            <configuration>
-			                <inputSpec>${project.basedir}/doc/dokuti_api.yml</inputSpec>
-			                <output>${project.basedir}/srcgen</output>
-			                <generatorName>spring</generatorName>
-			                <configOptions>
-			                    <!-- 
-			                         To find out what configOptions are available, run:
-			                         java -jar openapi-generator-cli.jar config-help -l spring
-			                         or check https://github.com/OpenAPITools/openapi-generator/blob/master/docs/generators/spring.md
-			                     -->
-			                    <interfaceOnly>true</interfaceOnly>
-			                    <java8>true</java8>
-			                    <dateLibrary>java8</dateLibrary>
-			                    <useBeanValidation>true</useBeanValidation>
-			                    
-			                    <delegatePattern>true</delegatePattern>
-			                    <delegateMethod>true</delegateMethod>
-			                    
-			                    <singleContentTypes>false</singleContentTypes>
-			                    
-			                    <hateoas>false</hateoas>
-			                </configOptions>
-			                
-			                <library>spring-boot</library>
-			                
-			                <templateDirectory>${project.basedir}/doc/</templateDirectory>
-			                
-			                <generateApis>true</generateApis>
-			                <generateApiTests>false</generateApiTests>
-			                <generateApiDocumentation>false</generateApiDocumentation>
-			                <generateModels>true</generateModels>
-			                <generateModelTests>false</generateModelTests>
-			                <generateModelDocumentation>false</generateModelDocumentation>
-			                <generateSupportingFiles>true</generateSupportingFiles> <!-- must be true if supportingFilesToGenerate set -->
-			                <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
-			            </configuration>
-			        </execution>
-			    </executions>
-		</plugin>
+			<!-- activate the plugin -->
+			<plugin>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<version>3.3.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/doc/dokuti_api.yml</inputSpec>
+							<output>${project.basedir}/srcgen</output>
+							<generatorName>spring</generatorName>
+							<configOptions>
+								<!-- To find out what configOptions are available, run: java -jar 
+									openapi-generator-cli.jar config-help -l spring or check https://github.com/OpenAPITools/openapi-generator/blob/master/docs/generators/spring.md -->
+								<interfaceOnly>true</interfaceOnly>
+								<java8>true</java8>
+								<dateLibrary>java8</dateLibrary>
+								<useBeanValidation>true</useBeanValidation>
+
+								<delegatePattern>true</delegatePattern>
+								<delegateMethod>true</delegateMethod>
+
+								<singleContentTypes>false</singleContentTypes>
+
+								<hateoas>false</hateoas>
+							</configOptions>
+
+							<library>spring-boot</library>
+
+							<templateDirectory>${project.basedir}/doc/</templateDirectory>
+
+							<generateApis>true</generateApis>
+							<generateApiTests>false</generateApiTests>
+							<generateApiDocumentation>false</generateApiDocumentation>
+							<generateModels>true</generateModels>
+							<generateModelTests>false</generateModelTests>
+							<generateModelDocumentation>false</generateModelDocumentation>
+							<generateSupportingFiles>true</generateSupportingFiles> <!-- must be true if supportingFilesToGenerate set -->
+							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
