Giving the dokuti development docker-compose it's own folder name to prevent inter-project clashes when running many docker compose projects at the same time.

--- a/development-resources/docker-compose/dokuti-development/docker-compose.yml
+++ b/development-resources/docker-compose/dokuti-development/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
-  dokuti-postgresql:
+  dokuti-development-postgresql:
+    networks:
+      - dokuti-development
     image: "postgres:10.7-alpine"
     restart: always
     ports:
@@ -10,3 +12,6 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=dokuti
+      
+networks:
+  dokuti-development:
