--- a/development-resources/docker-compose/dokuti-development/docker-compose.yml
+++ b/development-resources/docker-compose/dokuti-development/docker-compose.yml
@@ -12,6 +12,33 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=dokuti
+  dokuti-identity-server-development:
+    networks:
+      - dokuti-development
+    image: "gbl-baobab-docker-virtual.jfrog.io/identityserver"
+    restart: always
+    ports:
+      - 5000:80
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./identity-server-appsettings.json:/app/appsettings.json
+    depends_on:
+      - dokuti-development-postgresql
+    command: sh -c './wait-for.sh dokuti-postgresql-development:5432 -- '
+  dokuti-a3s-development:
+    networks:
+      - dokuti-development
+    image: "gbl-baobab-docker-virtual.jfrog.io/a3s"
+    restart: always
+    ports:
+      - 5001:80
+    volumes:
+      - ./a3s-appsettings.json:/app/appsettings.json
+    depends_on:
+      - dokuti-development-postgresql
+      - dokuti-identity-server-development
+    command: sh -c './wait-for.sh dokuti-postgresql-development:5432 -- '
       
 networks:
   dokuti-development:
