--- a/quickstart/docker-compose/a3s-appsettings.json
+++ b/quickstart/docker-compose/a3s-appsettings.json
@@ -6,7 +6,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityServerConnection": "host=dokuti-postgresql-quickstart;port=5432;userid=postgres;password=postgres;database=identity_server",
-    "A3SConnection": "host=dokuti-postgresql-quickstart;port=5432;userid=postgres;password=postgres;database=a3s"
+    "IdentityServerConnection": "host=dokuti-postgresql-quickstart;port=5432;userid=postgres;password=postgres;database=identity_server"
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5000",
+    "Audience": "a3s"
   }
 }
