--- a/doc/dokuti_api.yml
+++ b/doc/dokuti_api.yml
@@ -14,6 +14,13 @@ paths:
       description: Returns list of all documents associated with the logged in user
       operationId: getDocuments
       parameters:
+        - name: archive
+          in: query 
+          required: false
+          description: Archive document's filter
+          schema:
+            type: boolean
+            default: false
         - name: page
           in: query
           required: false
@@ -378,6 +385,108 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  
+  '/documents/{documentId}/archive':
+    patch:
+      tags:
+        - Documents
+      summary: Archive a document by ID
+      description: Archive a document by ID.
+      operationId: AricheveDocument
+      parameters:
+        - in: path
+          name: documentId
+          schema:
+            $ref: '#/components/schemas/documentId'
+          required: true      
+      responses:
+        '200':
+          description: Successful. Document archived.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Document'
+        '400':
+          description: Invalid parameters.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Not authorized to update Documents.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Document not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: An unexpeced error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  '/documents/{documentId}/unarchive':
+    patch:
+      tags:
+        - Documents
+      summary: Unarchive a document by ID
+      description: Unarchive a document by ID.
+      operationId: UnaricheveDocument
+      parameters:
+        - in: path
+          name: documentId
+          schema:
+            $ref: '#/components/schemas/documentId'
+          required: true      
+      responses:
+        '200':
+          description: Successful. Document unarchived.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Document'
+        '400':
+          description: Invalid parameters.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Not authorized to update Documents.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Document not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: An unexpeced error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  
   '/documents/{documentId}/info':
     put:
       tags:
