--- a/doc/dokuti_api.yml
+++ b/doc/dokuti_api.yml
@@ -1793,6 +1793,9 @@ components:
         description:
           type: string
           example: A test description for the file.
+        isArchive:
+          type: boolean
+          example: true         
         contentType:
           type: string
           example: text/plain
