removed document group feature

--- a/doc/dokuti_api.yml
+++ b/doc/dokuti_api.yml
@@ -50,18 +50,6 @@ paths:
             minLength: 0
             maxLength: 255
           example: Regulatory%20Document%20Name
-        - name: filterGroupNames
-          in: query
-          required: false
-          description: >-
-            A search query filter on the names of Document Groups that will filter documents that are assigned to the groups. The search uses logical AND between the search parameters.
-          schema:
-            type: array
-            items:
-              type: string
-              minLength: 0
-              maxLength: 255
-          example: Regulatory%20Document%20Name
         - name: filterTags
           in: query
           required: false
@@ -344,7 +332,7 @@ paths:
       summary: Delete document.
       description: >-
         Deletes a document and all associated components, such as versions,
-        document groups, documents tags and document status.
+        documents tags and document status.
       operationId: deleteDocument
       parameters:
         - in: path
@@ -771,405 +759,6 @@ paths:
           name: documentId
           schema:
             $ref: '#/components/schemas/documentId'
-          required: true
-  /groups:
-    post:
-      tags:
-        - Groups
-      summary: Creates a new group.
-      description: Creates a new group.
-      operationId: createGroup
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GroupRequest'
-      responses:
-        '201':
-          description: The newly created group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Group'
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to create Group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-    get:
-      tags:
-        - Groups
-      summary: Gets all groups.
-      description: Return a paginated list of all groups
-      operationId: getGroups
-      parameters:
-        - name: page
-          in: query
-          required: false
-          description: The page to view.
-          schema:
-            type: integer
-            minimum: 0
-            format: int32
-            default: 0
-        - name: size
-          in: query
-          required: false
-          description: The size of a page.
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 20
-            format: int32
-            default: 10
-        - name: filterName
-          in: query
-          required: false
-          description: A search query filter on Group name.
-          schema:
-            type: string
-            minLength: 0
-            maxLength: 255
-          example: Example group
-        - name: orderBy
-          in: query
-          required: false
-          style: form
-          explode: false
-          description: >-
-            list of fields in their sort order. Ascending order is assumed. In
-            the format ($propertyname,)+[asc|desc]?. For example:- 
-              ?orderBy=name,desc
-              ?orderBy=name,asc&orderBy=numberOfHands,desc
-              ?orderBy=name     defaults to asc 
-          schema:
-            type: array
-            nullable: true
-            items:
-              type: string
-            minItems: 0
-          examples:
-            oneFieldDescending:
-              summary: Example of a single sort field requested in descending order
-              value:
-                - name desc
-            multipleFields:
-              summary: Example of a multiple sort fields
-              value:
-                - name
-                - tags
-      responses:
-        '200':
-          description: OK. A list of gropus matching the filter criteria.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GroupList'
-          headers:
-            X-Pagination:
-              description: Pagination header
-              schema:
-                $ref: '#/components/schemas/PaginationHeaderResponse'
-        '204':
-          description: No content
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to get groups.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  '/groups/{groupId}':
-    get:
-      tags:
-        - Groups
-      summary: Gets a group by ID.
-      description: Gets a group by ID.
-      operationId: getGroup
-      parameters:
-        - in: path
-          name: groupId
-          schema:
-            $ref: '#/components/schemas/groupId'
-          required: true
-      responses:
-        '200':
-          description: The group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Group'
-        '204':
-          description: No content.
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to get group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Document Group not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-    put:
-      tags:
-        - Groups
-      summary: Updates a group.
-      description: Replaces the group name for the given groupId.
-      operationId: updateGroup
-      parameters:
-        - in: path
-          name: groupId
-          schema:
-            $ref: '#/components/schemas/groupId'
-          required: true
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GroupRequest'
-      responses:
-        '200':
-          description: The updated group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Group'
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to update Group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Group not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-    delete:
-      tags:
-        - Groups
-      summary: Deletes a group by Id.
-      description: Deletes a group using the groupId.
-      operationId: deleteGroup
-      parameters:
-        - in: path
-          name: groupId
-          schema:
-            $ref: '#/components/schemas/groupId'
-          required: true
-      responses:
-        '204':
-          description: The group has been deleted.
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to delete Group.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Group not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  '/documents/{documentId}/groups/{groupId}':
-    post:
-      tags:
-        - Document Groups
-      summary: Applies a group to a document.
-      description: Applies a group to a document
-      operationId: createDocumentGroup
-      responses:
-        '201':
-          description: Successful. Updated group associations for the document.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Group'
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to update document groups.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Resource (Document or Group) not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-      parameters:
-        - in: path
-          name: documentId
-          schema:
-            $ref: '#/components/schemas/documentId'
-          required: true
-        - in: path
-          name: groupId
-          schema:
-            $ref: '#/components/schemas/groupId'
-          required: true
-    delete:
-      tags:
-        - Document Groups
-      summary: Delete a document group.
-      description: Removes the association of a given group from the given document.
-      operationId: deleteDocumentGroup
-      responses:
-        '204':
-          description: OK
-        '400':
-          description: Invalid parameters.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authorized to delete document groups.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Resource (Document or Group) not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpeced error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-      parameters:
-        - in: path
-          name: documentId
-          schema:
-            $ref: '#/components/schemas/documentId'
-          required: true
-        - in: path
-          name: groupId
-          schema:
-            $ref: '#/components/schemas/groupId'
           required: true
   '/documents/{documentId}/attributes/{attributeId}':
     post:
@@ -1704,10 +1293,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 tags:
-  - name: Groups
-    description: APIs for managing groups that can be applied to documents.
-  - name: Document Groups
-    description: APIs for managing and accessing document group associations.
   - name: Documents
     description: APIS for managing documents.
   - name: Document Versions
@@ -1753,32 +1338,6 @@ components:
       description: A list of attributes
       items:
         $ref: '#/components/schemas/Attribute'
-    Group:
-      type: object
-      description: A group that can be applied to a document.
-      properties:
-        id:
-          $ref: '#/components/schemas/groupId'
-        name:
-          type: string
-          example: example group
-    GroupRequest:
-      type: object
-      description: Object modelling a group request (create/update).
-      properties:
-        name:
-          type: string
-          description: The group name.
-          example: Attribute Name
-    GroupList:
-      type: array
-      items:
-        $ref: '#/components/schemas/Group'
-    groupId:
-      type: string
-      format: uuid
-      description: The ID of the group. This is the primary identifier for a group.
-      example: 421b770f-b03c-4c4f-93ec-c74bc12c3cfa
     dateTime:
       type: string
       format: date
@@ -1803,8 +1362,6 @@ components:
           $ref: '#/components/schemas/DocumentVersionList'
         tags:
           $ref: '#/components/schemas/LookupTagList'
-        groups:
-          $ref: '#/components/schemas/GroupList'
         attributes:
           $ref: '#/components/schemas/DocumentAttributeList'
     DocumentInfoRequest:
